<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="#00ff00"/>

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/good_color"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_configChanges_flag_with"
            android:onClick="configChangesFlagWith"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_configChanges_flag_without"
            android:backgroundTint="#00ff00"
            android:onClick="configChangesFlagWithout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_orientation_flag"
            android:onClick="usingOrientationFlag"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_fragment_readding_every_oncreate"
            android:onClick="fragmentReaddingEveryOnCreate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_fragment_readding_non_recreations"
            android:backgroundTint="#00ff00"
            android:onClick="fragmentReaddingNonRecreations"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_fragment_backstack"
            android:backgroundTint="#00ff00"
            android:onClick="fragmentBackstackDemo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_recreating_list_view"
            android:backgroundTint="#00ff00"
            android:onClick="recreatingListView"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_async_task_ignore"
            android:onClick="asyncTaskIgnore"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_async_task_ignore_v2"
            android:onClick="asyncTaskIgnoreV2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_async_task_cancel"
            android:backgroundTint="#00ff00"
            android:onClick="asyncTaskCancel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_async_task_retain"
            android:backgroundTint="#00ff00"
            android:onClick="asyncTaskRetain"/>

    </LinearLayout>

</ScrollView>